[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]


[[bin]]
name = "1"
path = "src/bin/1/main.rs"

[[bin]]
name = "2"
path = "src/bin/2/main.rs"

[[bin]]
name = "3"
path = "src/bin/3/main.rs"

[[bin]]
name = "4"
path = "src/bin/4/main.rs"

[[bin]]
name = "5"
path = "src/bin/5/main.rs"

[[bin]]
name = "6"
path = "src/bin/6/main.rs"

[[bin]]
name = "7"
path = "src/bin/7/main.rs"

[[bin]]
name = "8"
path = "src/bin/8/main.rs"

[[bin]]
name = "9"
path = "src/bin/9/main.rs"

[[bin]]
name = "10"
path = "src/bin/10/main.rs"

[[bin]]
name = "11"
path = "src/bin/11/main.rs"

[[bin]]
name = "12"
path = "src/bin/12/main.rs"

[[bin]]
name = "13"
path = "src/bin/13/main.rs"

[[bin]]
name = "14"
path = "src/bin/14/main.rs"

[[bin]]
name = "15"
path = "src/bin/15/main.rs"

[[bin]]
name = "16"
path = "src/bin/16/main.rs"

[[bin]]
name = "17"
path = "src/bin/17/main.rs"

[[bin]]
name = "18"
path = "src/bin/18/main.rs"

[[bin]]
name = "19"
path = "src/bin/19/main.rs"

[[bin]]
name = "20"
path = "src/bin/20/main.rs"

[[bin]]
name = "21"
path = "src/bin/21/main.rs"

[[bin]]
name = "22"
path = "src/bin/22/main.rs"

[[bin]]
name = "23"
path = "src/bin/23/main.rs"

[[bin]]
name = "24"
path = "src/bin/24/main.rs"

[[bin]]
name = "25"
path = "src/bin/25/main.rs"